<resources>
    <string name="app_name">El Lector Voraz</string>
    <!--Nav Bar-->
    <string name="nav_inicio">Inicio</string>
    <string name="nav_compras">Compras</string>
    <string name="nav_avisos">Avisos</string>
    <string name="nav_perfil">Perfil</string>

    <!--Login-->
    <string name="title_activity_login">Iniciar Sesión</string>
<!--    <string name="prompt_email">Email</string>-->
    <string name="prompt_username">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="go_to_sign_up">¿No tenes una cuenta? <u>Registrate</u></string>

    <!--Registro-->
    <string name="action_sign_up">Registrarse</string>
    <string name="go_to_sign_in">¿Ya tenes una cuenta? <u>Iniciar Sesión</u></string>
    <string-array name="roles">
        <item>Rol</item>
        <item>Administrador</item>
        <item>Empleado Libreria</item>
        <item>Empleado Cafeteria</item>
    </string-array>

    <!--Construir mensaje Operaciones correctas/incorrectas-->
    <string name="book">El libro</string>
    <string name="magazine">La revista</string>
    <string name="supply">El artículo</string>
    <string name="user">El usuario</string>
    <string name="error">no pudo incorporarse al sistema</string>
    <string name="success">se ha incorporado al sistema de forma correcta!</string>
    <string name="back">Volver</string>

    <!--Sector Libreria-->
    <string name="sector_libreria">SECTOR LIBRERIA</string>
    <string name="btn_catalogos">Catálogos</string>
    <string name="btn_gestion">Gestión</string>
    <string name="btn_eventos">Eventos</string>

    <!--Formularios-->
    <string name="btn_registrar">Registrar</string>

    <!--Catalogos-->
    <string name="action_search">Buscar</string>
    <string name="action_filter">Filtrar</string>

    <string name="welcome">"Welcome !"</string>

    <string name="texto_registro">¡El registro fue realizado <b>satisfactoriamente</b>!</string>
    <string name="texto_registro_libro">El libro se ha incorporado al sistema de forma correcta</string>
    <string name="texto_registro_libro_incorrecto">El libro no se ha incorporado al sistema de forma correcta</string>
    <string name="texto_registro_revista">La revista se ha incorporado al sistema de forma correcta</string>
    <string name="texto_registro_revista_incorrecto">La revista no se ha incorporado al sistema de forma correcta</string>
    <string name="texto_registro_articulo_incorrecto">El artículo no se ha incorporado al sistema de forma correcta</string>
    <string name="texto_registro_articulo">El artículo se ha incorporado al sistema de forma correcta</string>
    <string name="gestion_titulo">GESTIÓN</string>
    <string name="gestion_btn_pedidos">Pedidos</string>
    <string name="gestion_btn_ventas">Ventas</string>
    <string name="gestion_btn_proveedores">Proveedores</string>


</resources>