<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="horizontal"
    tools:context=".P10_PantallaDeSistemaParticular">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f5f5f5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="65dp"
                android:paddingEnd="20dp">

                <ImageView
                    android:id="@+id/flechaVolver"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:contentDescription="Volver"
                    android:src="@drawable/arrow_back_24px" />

                <TextView
                    android:id="@+id/textView_SistemaParticular"
                    android:layout_width="195dp"
                    android:layout_height="19dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="48dp"
                    android:layout_toEndOf="@id/flechaVolver"
                    android:autoSizeTextType="uniform"
                    android:fontFamily="sans-serif"
                    android:text="@string/gestion_titulo"
                    android:textAlignment="center"
                    android:textColor="#2A2A2A"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#f5f5f5" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPedidos"
                android:layout_width="296dp"
                android:layout_height="115dp"
                android:layout_gravity="center"
                android:background="@drawable/button_border_1"
                android:text="@string/gestion_btn_pedidos"
                android:textAllCaps="false"
                android:textColor="#2A2A2A"
                android:textSize="32sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#f5f5f5" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnVentas"
                android:layout_width="296dp"
                android:layout_height="115dp"
                android:layout_gravity="center"
                android:background="@drawable/button_border_1"
                android:text="@string/gestion_btn_ventas"
                android:textAllCaps="false"
                android:textColor="#2A2A2A"
                android:textSize="32sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#f5f5f5" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnProveedores"
                android:layout_width="296dp"
                android:layout_height="115dp"
                android:layout_gravity="center"
                android:background="@drawable/button_border_1"
                android:text="@string/gestion_btn_proveedores"
                android:textAllCaps="false"
                android:textColor="#2A2A2A"
                android:textSize="32sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#f5f5f5" />


            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f5f5f5">

                <com.google.android.material.bottomappbar.BottomAppBar
                    android:id="@+id/bottomAppBar2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:backgroundTint="#f5f5f5" />
            </androidx.coordinatorlayout.widget.CoordinatorLayout>

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                app:itemIconTint="@color/selector_icon_color"
                app:itemTextColor="@color/selector_text_color"
                app:labelVisibilityMode="labeled"
                app:menu="@menu/bottom_nav_bar_menu" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>