<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="horizontal"
    android:visibility="visible"
    tools:context=".P4_PantallaLoginLibreria">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f5f5f5">


        <TextView
            android:id="@+id/login_txt_app_name"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:autoSizeTextType="uniform"
            android:fontFamily="sans-serif"
            android:text="LOGOTIPO"
            android:textAlignment="center"
            android:textColor="#2A2A2A"
            android:textSize="48sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.114" />

        <ImageView
            android:id="@+id/login_img_back"
            android:layout_width="40dp"
            android:layout_height="31dp"
            android:clickable="true"
            android:contentDescription="Ir a pantalla anterior"
            android:src="@drawable/arrow_back_24px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/login_txt_app_name"
            app:layout_constraintHorizontal_bias="0.588"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.127" />

        <TextView
            android:id="@+id/login_txt_title"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:autoSizeTextType="uniform"
            android:fontFamily="sans-serif"
            android:text="@string/action_sign_in"
            android:textAlignment="center"
            android:textColor="#2A2A2A"
            android:textSize="36sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.265" />

        <EditText
            android:id="@+id/login_input_username"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/prompt_username"
            android:inputType="text"
            android:textColor="@color/form_text"
            android:textColorHint="@color/form_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_txt_title"
            app:layout_constraintVertical_bias="0.131" />

        <EditText
            android:id="@+id/login_input_password"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:textColor="@color/form_text"
            android:textColorHint="@color/form_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_input_username"
            app:layout_constraintVertical_bias="0.052" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btnLogin"
            android:layout_width="297dp"
            android:layout_height="87dp"
            android:background="@drawable/button_border_1"
            android:text="@string/action_sign_in"
            android:textAllCaps="false"
            android:textColor="#2A2A2A"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_input_password"
            app:layout_constraintVertical_bias="0.215" />

        <TextView
            android:id="@+id/login_txt_signup"
            android:layout_width="264dp"
            android:layout_height="39dp"
            android:autoSizeTextType="uniform"
            android:fontFamily="sans-serif"
            android:text="@string/go_to_sign_up"
            android:textAlignment="center"
            android:textColor="#2A2A2A"
            android:textSize="8sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_btnLogin"
            app:layout_constraintVertical_bias="0.876" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#f5f5f5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="#f5f5f5"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="#f5f5f5" />

    </LinearLayout>


</LinearLayout>